--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,64 +1,92 @@
+:root{
+  --White: hsl(0, 0%, 100%);
+  --Light-gray: hsl(212, 45%, 89%);
+  --Grayish-blue: hsl(220, 15%, 55%);
+  --Dark-blue: hsl(218, 44%, 22%)
+}
+
+*{margin: 0;
+padding: 0;}
+
 body {
   height: 100vh;
   width: 100%;
-  background-color: hsl(212, 45%, 89%);
-  margin: 0;
+  background-color:var(--Light-gray);
+  
 }
 
-.main {
+.container {
   width: 100%;
-  height: 95vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+ 
 }
-.card {
-  height: 70%;
-  width: 250px;
-  background-color: hsl(0, 0%, 100%);
+
+
+.card{
+  
+  height: 497px;
+  width: 320px;
+  background-color: var(--White);
   border-radius: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 12px 0 20px 0;
-  box-shadow: 0 0 20px hsl(220, 9%, 81%);
+  justify-content: space-around;
 }
 
-img {
-  width: 90%;
-  height: 62%;
+img{
+  height: 288px;
+  width: 288px;
   border-radius: 10px;
 }
 
-.p1 {
-  text-align: center;
-  font-size: 17px;
-  font-family: "Outfit", sans-serif;
+.image-info{
+
+  height: 129px;
+  width: 288px;
+  margin-bottom: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+h2{
+  font-family: 'Outfit', sans-serif;
+  color: var(--Dark-blue);
   font-weight: 700;
-  width: 90%;
-  margin: 10px 0 10px 0;
-  color: hsl(218, 44%, 22%);
-  padding: 5px;
-}
-
-.p2 {
-  font-size: 13px;
-  font-weight: 500;
-  width: 90%;
-  margin: 0;
-  color: hsl(220, 15%, 55%);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 22px;
   text-align: center;
 }
 
-.attribution {
-  background-color: hsl(220, 15%, 55%);
-  position: absolute;
-  bottom: 0;
+.image-info p{
+  color: var(--Grayish-blue);
+  font-weight: 400;
+  font-size: 15px;
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin-top: 10px;
+  width: 256px;
+}
+
+footer{
   width: 100%;
-  height: 5vh;
-  text-align: center;
-  font-size: clamp(12px, 2vw, 15px);
-  padding-top: 5px;
+  position: absolute;
+  bottom: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.attribution{
+  background-color: var(--Grayish-blue);
+  border-radius: 10px;
+  width: 200px;
+  font-size: clamp(10px, 2vw , 15px);
+  text-align: center;
+}
+
+
